<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookActivity"
    style="@style/Theme.Design.NoActionBar">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown_main">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_index"
            android:textColor="@color/red_br"
            android:textSize="12pt" />

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="42dp"
            android:layout_height="37dp"
            android:background="@color/brown_main"
            android:foreground="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_anchor="@+id/appBarLayout"
            app:layout_anchorGravity="start|center"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="105dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:id="@+id/book_cover"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:layout_width="160dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/cover_text"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/no_cover"
            android:textColor="@color/pale_grey"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/book_title"
            android:text="@string/place_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/book_cover"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:id="@+id/book_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:layout_marginLeft="10dp"
            android:text="@string/place_subtitle"
            android:textColor="@color/pale_grey"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/book_cover"
            app:layout_constraintTop_toBottomOf="@id/book_title" />
        <TextView
            android:id="@+id/book_isbn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_isbn"
            android:textColor="@color/pale_grey"
            android:textSize="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/book_cover"
            app:layout_constraintTop_toBottomOf="@id/book_subtitle" />

        <TextView
            android:id="@+id/book_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/place_price"
            android:textColor="@color/pale_grey"
            android:textSize="18dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/book_cover"
            app:layout_constraintTop_toBottomOf="@id/book_isbn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authors"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_price"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:text="@string/authors"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_authors"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/authors"
            app:layout_constraintTop_toBottomOf="@id/book_price"
            android:text="@string/nia"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/publisher"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_authors"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/publisher"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_publisher"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/publisher"
            app:layout_constraintTop_toBottomOf="@id/book_authors"
            android:text="@string/nia"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/year"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_publisher"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/year"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_year"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/year"
            app:layout_constraintTop_toBottomOf="@id/book_publisher"
            android:text="@string/nia"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_year"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_rating"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/rating"
            app:layout_constraintTop_toBottomOf="@id/book_year"
            android:text="@string/nia"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pages"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_rating"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/pages"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_pages"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/pages"
            app:layout_constraintTop_toBottomOf="@id/book_rating"
            android:text="@string/nia"
            android:textColor="@color/pale_grey"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/book_pages"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/desc"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/book_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:text="@string/place_desc"
            android:textColor="@color/pale_grey"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>