<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/cover"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/place_title"
        android:textColor="@color/pale_grey"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/cover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="monospace"
        android:text="@string/place_subtitle"
        android:textColor="@color/pale_grey"
        android:textSize="16dp"
        app:layout_constraintLeft_toRightOf="@id/cover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/isbn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/place_isbn"
        android:textColor="@color/pale_grey"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cover"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

    <TextView
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/place_price"
        android:textColor="@color/pale_grey"
        android:textSize="18dp"
        app:layout_constraintLeft_toRightOf="@id/cover"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/isbn" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price" />

</androidx.constraintlayout.widget.ConstraintLayout>